--- a/app/src/main/res/layout/activity_pet_card.xml
+++ b/app/src/main/res/layout/activity_pet_card.xml
@@ -5,13 +5,97 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PetCardActivity">
+    tools:context=".activities.PetCardActivity"
+    android:background="@drawable/background_gradient1">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/petCardButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="141dp"
-        tools:layout_editor_absoluteY="623dp" />
+        android:layout_marginTop="36dp"
+        android:backgroundTint="#EBBA3B"
+        android:fontFamily="@font/pressstart2p_regular"
+        android:text="Карточка питомца"
+        android:textColor="#135854"
+        android:textSize="11sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
+        app:layout_constraintVertical_bias="0.102" />
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="374dp"
+        android:layout_height="392dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.432"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.637" />
+
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="187dp"
+            android:layout_height="64dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/pressstart2p_regular"
+            android:text="TextView"
+            android:textAlignment="viewStart"
+            android:textColor="#EAB93B"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="186dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/pressstart2p_regular"
+            android:text="TextView"
+            android:textAlignment="viewEnd"
+            android:textColor="#EAB93B"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="186dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/pressstart2p_regular"
+            android:text="TextView"
+            android:textAlignment="viewEnd"
+            android:textColor="#EAB93B"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="171dp"
+            android:layout_height="174dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="186dp"
+            android:layout_height="20dp"
+            android:layout_marginTop="16dp"
+            android:fontFamily="@font/pressstart2p_regular"
+            android:text="TextView"
+            android:textAlignment="viewEnd"
+            android:textColor="#EAB93B"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
