--- a/app/src/main/res/layout/activity_pet_card.xml
+++ b/app/src/main/res/layout/activity_pet_card.xml
@@ -8,6 +8,8 @@
     tools:context=".activities.PetCardActivity"
     android:background="@drawable/background_gradient1">
 
+    
+
     <Button
         android:id="@+id/petCardButton"
         android:layout_width="wrap_content"
@@ -37,65 +39,67 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.637" />
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="187dp"
-            android:layout_height="64dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/pressstart2p_regular"
-            android:text="TextView"
-            android:textAlignment="viewStart"
-            android:textColor="#EAB93B"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="187dp"
+        android:layout_height="64dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/pressstart2p_regular"
+        android:text="Не указано"
+        android:textAlignment="viewStart"
+        android:textColor="#EAB93B"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="186dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/pressstart2p_regular"
-            android:text="TextView"
-            android:textAlignment="viewEnd"
-            android:textColor="#EAB93B"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="186dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/pressstart2p_regular"
+        android:text="Не указано"
+        android:textAlignment="viewEnd"
+        android:textColor="#EAB93B"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="186dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/pressstart2p_regular"
-            android:text="TextView"
-            android:textAlignment="viewEnd"
-            android:textColor="#EAB93B"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toBottomOf="@+id/textView5" />
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="186dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/pressstart2p_regular"
+        android:text="Не указано"
+        android:textAlignment="viewEnd"
+        android:textColor="#EAB93B"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="171dp"
-            android:layout_height="174dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars" />
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="171dp"
+        android:layout_height="174dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@drawable/kitten_1" />
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="186dp"
-            android:layout_height="20dp"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/pressstart2p_regular"
-            android:text="TextView"
-            android:textAlignment="viewEnd"
-            android:textColor="#EAB93B"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView3"
-            app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="186dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/pressstart2p_regular"
+        android:text="Kisto4ka"
+        android:textAlignment="viewEnd"
+        android:textColor="#EAB93B"
+        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.157" />
 </androidx.constraintlayout.widget.ConstraintLayout>
